--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zerihuntegenu",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -16,7 +16,8 @@
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "eslint": "^8",
