--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
